remove mousemove hack on 10.2.8+ as it's no longer necessary and causesother problems (bug 234207)